--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "battery-push-server",
+  "name": "laptop-battery-server",
   "version": "1.0.0",
-  "type": "module",
-  "main": "server.js",
-  "engines": { "node": ">=18" },
+  "private": true,
+  "scripts": {
+    "start": "node server.cjs"
+  },
+  "engines": { "node": "20.x" },
   "dependencies": {
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "apn": "^3.0.0"
   }
 }
