--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": { "start": "node server.cjs" },
   "engines": { "node": "20.x" },
   "dependencies": {
-    "express": "^4.19.2",
-    "apn": "2.2.0"
+    "express": "^4.19.2"
   }
 }
